...
                    height: containerHeight,
                    decoration: const BoxDecoration(
                      color: Colors.transparent,
                    ),
                    child: Center(
                      child: Text(
                        'Search',
                        style: showPokedex
                            ? AppTextStyle.titleBlack
                            : AppTextStyle.titleWhite,
                      ),
                    ),
                  ),
...
